tmuxの設定を変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+# prefixキーをC-tに変更する
+set -g prefix C-t
+
+# C-bのキーバインドを解除する
+unbind C-b
+
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
