--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,9 @@ bind-key v copy-mode \; display "Copy mode!"
 # bind-key -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
