--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,8 @@ bind-key v copy-mode \; display "Copy mode!"
 # bind-key -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
